removed some autoboxing/unboxing